--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // project module
+    implementation(project(":model"))
+
     // android  ktx
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "androidx.activity:activity-ktx:1.1.0"
