--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,20 +5,20 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion project.compileSdkVersion
+    buildToolsVersion project.buildToolsVersion
 
     defaultConfig {
         applicationId "com.bro.pagingpicker"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion project.minSdkVersion
+        targetSdkVersion project.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         Properties properties = new Properties()
-        properties.load(project.rootProject.file('gradle.properties').newDataInputStream())
+        properties.load(project.rootProject.file('properties/project.properties').newDataInputStream())
         buildConfigField("String", "TEMP", properties.get('temp'))
     }
 
@@ -46,48 +46,49 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.appcompat:appcompat:${project.appcompat}"
+    implementation "androidx.constraintlayout:constraintlayout:${project.constraintlayout}"
+    testImplementation "junit:junit:${project.junit}"
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
-    // project module
-    implementation(project(":model"))
+    // project module.
+    // memo. shared 내부에 model 이 api 로 연결
+    implementation(project(":shared"))
 
     // android  ktx
-    implementation "androidx.core:core-ktx:1.3.2"
-    implementation "androidx.activity:activity-ktx:1.1.0"
-    implementation "androidx.fragment:fragment-ktx:1.2.4"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation "androidx.core:core-ktx:${project.core_ktx}"
+    implementation "androidx.activity:activity-ktx:${project.activity_ktx}"
+    implementation "androidx.fragment:fragment-ktx:${project.fragment_ktx}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${project.lifecycle_ktx}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:${project.lifecycle_ktx}"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${project.lifecycle_ktx}"
+    // lifecycle scope (coroutine) 정의를 위해
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${project.lifecycle_ktx}"
 
     // hilt
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    implementation "com.google.dagger:hilt-android:${project.hilt_android}"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:${project.hilt_lifecycle_viewmodel}"
+    kapt "com.google.dagger:hilt-android-compiler:${project.hilt_android_compiler}"
+    kapt "androidx.hilt:hilt-compiler:${project.hilt_compiler}"
 
     // jakewharton Timber
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation "com.jakewharton.timber:timber:${project.timber}"
 
     // coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${project.coroutines}"
 
     // rxjava
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation "io.reactivex.rxjava3:rxandroid:${project.rxjava}"
+    implementation "io.reactivex.rxjava3:rxjava:${project.rxjava}"
+
+    // material
+    api "com.google.android.material:material:${project.material}"
 
     // UI library
 //    implementation "com.pacioianu.david:ink-page-indicator:1.3.0"
 
     // threetenbp
 //    api "org.threeten:threetenbp:1.3.6"
-
-    // material
-    api "com.google.android.material:material:1.1.0"
 
 }
