--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,43 @@ buildscript {
     }
 }
 
+// memo. 하위 모듈에서 바로, or project.~ 으로 접근할 수 있음.
+ext {
+    // 1. project managing version
+    compileSdkVersion = 29
+    buildToolsVersion = "29.0.3"
+    minSdkVersion = 21
+    targetSdkVersion = 29
+
+    // 2. library version
+    // 1) common
+    appcompat = "1.2.0"
+    constraintlayout = "2.0.4"
+    junit = "4.12"
+
+    // 2) ktx
+    core_ktx = "1.3.2"
+    activity_ktx = "1.1.0"
+    fragment_ktx = "1.2.4"
+    lifecycle_ktx = "2.2.0"
+
+    // 3) hilt
+    hilt_android = "2.28-alpha"
+    hilt_lifecycle_viewmodel = "1.0.0-alpha01"
+    hilt_android_compiler = "2.28-alpha"
+    hilt_compiler = "1.0.0-alpha01"
+
+    // 4) coroutines
+    coroutines = "1.3.9"
+
+    // 5) rx
+    rxjava = "3.0.0"
+
+    // 6) etc
+    material = "1.1.0"
+    timber = "4.7.1"
+}
+
 allprojects {
     repositories {
         google()
