--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     // material
     api "com.google.android.material:material:${project.material}"
 
+    // swiperefreshlayout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:${project.swiperefreshlayout}"
+
     // UI library
 //    implementation "com.pacioianu.david:ink-page-indicator:1.3.0"
 
