--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,10 @@ dependencies {
     // swiperefreshlayout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:${project.swiperefreshlayout}"
 
+    // paging
+    implementation "androidx.paging:paging-runtime:${project.paging}"
+    implementation "androidx.paging:paging-rxjava2:${project.paging}"
+
     // UI library
 //    implementation "com.pacioianu.david:ink-page-indicator:1.3.0"
 
