--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     // jakewharton Timber
     implementation "com.jakewharton.timber:timber:${project.timber}"
 
+    // paging
+    implementation "androidx.paging:paging-runtime:${project.paging}"
+    implementation "androidx.paging:paging-rxjava2:${project.paging}"
+
     // test
     testImplementation "junit:junit:${project.junit}"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
