--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,10 @@ dependencies {
     implementation "androidx.paging:paging-runtime:${project.paging}"
     implementation "androidx.paging:paging-rxjava2:${project.paging}"
 
+    // glide
+    implementation "com.github.bumptech.glide:glide:${project.glide}"
+    kapt "com.github.bumptech.glide:compiler:${project.glide}"
+
     // UI library
 //    implementation "com.pacioianu.david:ink-page-indicator:1.3.0"
 
