nav_fragment 구조로 변경

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.appcompat:appcompat:${project.appcompat}"
     implementation "androidx.constraintlayout:constraintlayout:${project.constraintlayout}"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation "junit:junit:${project.junit}"
     androidTestImplementation "androidx.test.ext:junit:1.1.2"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
@@ -95,6 +96,10 @@ dependencies {
     // glide
     implementation "com.github.bumptech.glide:glide:${project.glide}"
     kapt "com.github.bumptech.glide:compiler:${project.glide}"
+
+    // navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:${project.navigation}"
+    implementation "androidx.navigation:navigation-ui-ktx:${project.navigation}"
 
     // UI library
 //    implementation "com.pacioianu.david:ink-page-indicator:1.3.0"
