--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
+//apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion project.compileSdkVersion
@@ -100,6 +101,11 @@ dependencies {
     // navigation
     implementation "androidx.navigation:navigation-fragment-ktx:${project.navigation}"
     implementation "androidx.navigation:navigation-ui-ktx:${project.navigation}"
+//    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:${project.navigation}"
+
+    // image viewer
+    // 외부 라이브러리
+    implementation "com.davemorrissey.labs:subsampling-scale-image-view-androidx:${project.imageviewer}"
 
     // UI library
 //    implementation "com.pacioianu.david:ink-page-indicator:1.3.0"
