--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.10"
+    ext.hilt = "2.28-alpha"
+//    ext.navigation = "2.2.2"
+
     repositories {
         google()
         jcenter()
@@ -8,7 +11,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt"
+//        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -54,6 +58,7 @@ ext {
     paging = "2.1.2"
     glide = "4.11.0"
     navigation = "2.3.2"
+    imageviewer = "3.10.0"
 }
 
 allprojects {
